--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@mui/icons-material": "^5.10.14",
-    "@mui/material": "^5.10.14",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
