functioning site overview with "multiple" rpm entries.
Next steps:
- add pointmarkers for each rpm
- add "app" elements to page

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cesium": "1.99",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "file-loader": "^6.2.0",
     "html-plugin": "^0.1.0",
     "html-webpack-tags-plugin": "^3.0.2",
