--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-data-grid-generator": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
