--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mui/x-data-grid": "^6.18.1",
     "@mui/x-data-grid-generator": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.0",
+    "@types/d3": "^7.4.3",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
     "assert": "^2.0.0",
@@ -47,6 +48,8 @@
     "cesium": "1.99",
     "chart.js": "^4.4.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "d3": "^7.8.5",
+    "d3-interpolate": "^3.0.1",
     "file-loader": "^6.2.0",
     "html-plugin": "^0.1.0",
     "html-webpack-tags-plugin": "^3.0.2",
